# ai-risk-signal-triage

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  PLAN.md  README.md  pyproject.toml  requirements-pipeline.txt  requirements.txt
.claude/: settings.local.json
.claude/commands/: update.md
.claude/skills/eval-framework/: SKILL.md
.claude/skills/llm-judge-scoring/: SKILL.md
.claude/skills/streamlit-analytics-dashboard/: SKILL.md
.claude/skills/structured-outputs-anthropic/: SKILL.md
app/: components.py  streamlit_app.py
daily_prompts/: DAY10_PROMPT.md  DAY11_PROMPT.md  DAY12_PROMPT.md  DAY13_PROMPT.md  DAY1_PROMPT.md  DAY2_PROMPT.md  DAY3_PROMPT.md  DAY4_PROMPT.md  DAY5_PROMPT.md  DAY6_PROMPT.md  DAY7_PROMPT.md  DAY8_PROMPT.md  DAY9_PROMPT.md  STRETCH_PYTORCH_PROMPT.md
data/outputs/: SCORE_DISTRIBUTION_COMPARISON.md  SCORE_DISTRIBUTION_NOTE.md  digest.json  similarities.json
data/portfolio/: systems.yaml
data/signals/processed/: aiid_signals.json  governance_signals.json
scripts/: fetch_signals.py  generate_governance_signals.py  run_pipeline.py  run_retrieval.py  run_scoring.py
src/: ingest.py  pipeline.py  portfolio.py  retrieval.py  schemas.py  scoring.py
